--- a/01_intro.ipynb
+++ b/01_intro.ipynb
@@ -49,10 +49,7 @@
    "source": [
     "## Matlab jako kalkulator\n",
     "\n",
-    "**Operacje arytmetyczne**\n",
-    "\n",
-    "`+` dodawnie, `-` odejmowanie, `*` mnożenie, `/` dzielenie, `^` potęgowanie\n",
-    "\n"
+    "**Operacje arytmetyczne** `+` dodawnie, `-` odejmowanie, `*` mnożenie, `/` dzielenie, `^` potęgowanie"
    ]
   },
   {
@@ -128,6 +125,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ćwiczenie**: oblicz ile wynoisi $\\frac{1.3^{2.2}}{5.3 - 3/13}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -199,6 +203,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ćwiczenie**: oblicz ile wynosi $\\sqrt{\\sin(0.3\\pi) \\cdot e^{-0.1}} $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -265,10 +276,46 @@
     }
    },
    "source": [
+    "Formatowanie `printf`:\n",
+    "* liczby rzeczywiste: `%f`, `%e` notacja naukowa, `%g` krótka format \n",
+    " * `%.3f` precyzja\n",
+    " * `%10f` szerokośc okna\n",
+    " * `%-10f` wyrówanie do lewej\n",
+    "* `%d` liczby całkowite\n",
+    "* `%x` liczby całkowite (szesnastkowo)\n",
+    "* `%s` napis (ciąg znaków)\n",
+    "* `%c` znak"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fprintf('%f\\n', pi)\n",
+    "fprintf('%e\\n', pi)\n",
+    "fprintf('%g\\n', pi)\n",
+    "fprintf('%.10f\\n', pi)\n",
+    "fprintf('%10f\\n', pi)\n",
+    "fprintf('%10.2f\\n', pi)\n",
+    "fprintf('%-10.2f\\n', pi)\n",
+    "fprintf('%d %x %c\\n', 42, 42, 42)\n",
+    "fprintf('Liczba %s wynosi %f', 'pi', pi)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## Zmienne\n",
     "    \n",
     "* definicja i inicjalizacja zmiennych \n",
-    "* operator `=` przypisania wartości \n",
+    "* operator `=` przypisania wartości <br>  `zmienna = wyrażenie`\n",
     "* nazwy zmiennych `A-Za-z0-9_`, małe/wielkie litery rozróżniane"
    ]
   },
@@ -324,7 +371,8 @@
    },
    "source": [
     "* `who` - lista zmiennych \n",
-    "* `whos` - lista zmiennych wraz informacją o typie "
+    "* `whos` - lista zmiennych wraz informacją o typie\n",
+    "* `clear` - usuwanie zmiennych"
    ]
   },
   {
@@ -404,7 +452,7 @@
     "## Typy danych\n",
     "\n",
     "* typ `double` domyślny dla warlości liczbowych\n",
-    "* typ logiczny `logical`, `true`, `false`\n",
+    "* typ logiczny `logical`, wartości: `true`, `false`\n",
     "* typ znakowy `char`, napis to macierz (wektor) znaków\n",
     "* typ całkowity `int32` po rzutowaniu `int32()`\n"
    ]
@@ -514,6 +562,20 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ćwiczenie**: oblicz wartość wyrażenia $\\begin{bmatrix} \n",
+    "1 & 2 & 3 \\\\\n",
+    "\\end{bmatrix} \\cdot\n",
+    "\\begin{bmatrix} \n",
+    "1 \\\\\n",
+    "2\\\\\n",
+    "3 \\\\\n",
+    "\\end{bmatrix}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -522,7 +584,7 @@
    "source": [
     "## Komendy wbudowane\n",
     "\n",
-    "* `cls` \n",
+    "* `clc` czyszczenie wiersza poleceń \n",
     "* `who` `whos` lista zmiennych\n",
     "* `clear` usuwa wszystkie zmienne\n",
     "* `clear x` usuwa zmienną `x`\n",
@@ -553,7 +615,8 @@
     "  * `help elfun` elementarne funkcje matematyczne\n",
     "  * `help elmat` elementarne funkcje macierzowe\n",
     "* `doc polecenie` strona dokumentacji dotycząca polecenia\n",
-    "* `lookfor wyrażenie` lista poleceń dotyczacych wyrażenia\n"
+    "* `lookfor wyrażenie` lista poleceń dotyczacych wyrażenia\n",
+    "*  `F1`pomoc dotycząca zaznacznej funkcji"
    ]
   },
   {
@@ -563,6 +626,13 @@
    "outputs": [],
    "source": [
     "lookfor cosine"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Ćwiczenie**: zobacz pomoc dla polecenia `format`. Porównaj wyniki wyświetlania liczby $\\pi$ w róznych formatach, np.: `short`, `long`, `rat`, `bin`"
    ]
   },
   {
@@ -584,8 +654,66 @@
    },
    "outputs": [],
    "source": [
-    "x = 1:10\n",
-    "plot(x, sin(x))"
+    "x = -pi:pi;\n",
+    "plot(x, sin(x));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot(x, cos(x), 'o')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Inne przydatne komendy\n",
+    "\n",
+    "* `cd` zmiana katalogu\n",
+    "* `dir` zawartość katalogu\n",
+    "* `pwd` bieżący katalog\n",
+    "* `save nazwa` zapis zmiennych, `load nazwa` odczytanie zmiennych\n",
+    "* `date` data\n",
+    "* `clc` czyszcenie wiersza poleceń\n",
+    "* `quit` wyjście z Matlab\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "pwd\n",
+    "date"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**Ćwiczenie**: wykonaj nastepujące kroki:\n",
+    "1. usuń wszystkie zmienne i wyczyść wiersz poleceń\n",
+    "2. utwóż zmienne $x=\\pi$ i $y = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]$\n",
+    "3. zapisz zmienne w pliku o nazwie `dane`\n",
+    "4. usuń zmienne $x$ i $y$\n",
+    "5. wczytaj zmienne z pliku `dane` i wypisz ich wartości\n"
    ]
   },
   {
@@ -600,7 +728,9 @@
     "\n",
     "Tryby pracy Matlab:\n",
     "* interaktywny - w wierszu poleceń\n",
-    "* wsadowy - plik `*.m` (M-pliki) zawierający ciąg instrukcji staje się poleceniem Matlab. Nazwa pliku staje się poleceniem Matlaba, np. uruchomienie pliku `hello.m`"
+    "* wsadowy - plik `*.m` (M-pliki) zawierający ciąg instrukcji staje się poleceniem Matlab. Nazwa pliku staje się poleceniem Matlaba\n",
+    "\n",
+    "Przykład: uruchomienie pliku [hello.m](https://raw.githubusercontent.com/IS-UMK/pp2_matlab/master/hello.m)"
    ]
   },
   {
@@ -650,61 +780,12 @@
     }
    },
    "source": [
-    "## Komendy systemowe\n",
-    "\n",
-    "* `cd` zmiana katalogu\n",
-    "* `date` data\n",
-    "* `dir` zawartość katalogu\n",
-    "* `pwd` bieżący katalog\n",
-    "* `save nazwa` zapis zmiennych, `load nazwa` odczytanie zmiennych\n",
-    "* `quit` wyjście z Matlab\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "pwd\n",
-    "date"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "## Zadanie\n",
     "\n",
     "Napisz skrypt o nazwie `zad1.m`, który wykona nastepujące instrukcje:\n",
     "* wypisze Twoje imię i numer indeksu\n",
     "* wypisze wartość funkcji $$f(x) = \\frac{1}{ \\sqrt{2 \\pi}} e^{-x^2}$$ w punkcie $x=1$ z dokładnościa do 3 miejsc po przecinku\n",
     "* wyrysuje wykres $$ f(x) =  cos(2x) + e^{-0.01 x}$$  na odcinku $[-100, 100]$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true,
-    "slideshow": {
-     "slide_type": "notes"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "x = -100:100;\n",
-    "y = ( cos(2 * x) +  exp(-0.01 * x)) ;\n",
-    "plot(x, y)"
    ]
   }
  ],
