--- a/02_funkcje_instr.ipynb
+++ b/02_funkcje_instr.ipynb
@@ -11,11 +11,11 @@
     "# Funkcje, skrypty i instrukcje sterujące\n",
     "\n",
     "\n",
-    "* skrypt `plik.m` jest programem, który możemy uruchomić w linii komend Matlaba, operuje na danych zdefiniowanych w przestrzeni roboczej (`workspace`)\n",
-    "* skrypt może realizoać funkcję, czyli dla danych argumentów wzraca wartość wyjściową. Zmienne wewnętrzne funkcji są zmiennymi lokalnymi\n",
-    "* podstawowe instrukcje sterujące Matlab\n",
+    "* **skrypt** jest programem, który możemy uruchomić w linii komend Matlaba, operuje na danych zdefiniowanych w przestrzeni roboczej (*workspace*)\n",
+    "* skrypt może realizoać **funkcję**, czyli dla danych argumentów wzraca wartość wyjściową. Zmienne wewnętrzne funkcji są zmiennymi lokalnymi\n",
+    "* podstawowe instrukcje sterujące\n",
     "  * instrukcja warunkowa `if`\n",
-    "  * pętla `while`\n",
+    "  * pętla `while` i `for`\n",
     " "
    ]
   },
@@ -37,99 +37,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "pole_kola is the user-defined function defined from: /home/marek/work/zajecia/2020.zimowy/pp2/github/pole_kola.m\r\n",
-      "\r\n",
-      "% Skrypt wyznacza pole koła o promieniu 5\r\n",
-      "\r\n",
-      "% wartość promienia\r\n",
-      "r = 5\r\n",
-      "\r\n",
-      "% wzór na pole koła\r\n",
-      "pole = pi * r^2\r\n",
-      "\r\n",
-      "\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "type pole_kola"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "'pole_kola' is a script from the file /home/marek/work/zajecia/2020.zimowy/pp2/github/pole_kola.m\r\n",
-      "\r\n",
-      " Skrypt wyznacza pole koła o promieniu 5\r\n",
-      "\r\n",
-      "\r\n",
-      "Additional help for built-in functions and operators is\r\n",
-      "available in the online version of the manual.  Use the command\r\n",
-      "'doc <topic>' to search the manual index.\r\n",
-      "\r\n",
-      "Help and information about Octave is also available on the WWW\r\n",
-      "at https://www.octave.org and via the help@octave.org\r\n",
-      "mailing list.\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help pole_kola"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "r =  5\r\n",
-      "pole =  78.540\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pole_kola"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Variables in the current scope:\r\n",
-      "\r\n",
-      "   Attr Name        Size                     Bytes  Class\r\n",
-      "   ==== ====        ====                     =====  ===== \r\n",
-      "        ans         1x1                          8  double\r\n",
-      "        pole        1x1                          8  double\r\n",
-      "        r           1x1                          8  double\r\n",
-      "\r\n",
-      "Total is 3 elements using 24 bytes\r\n",
-      "\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "whos"
    ]
@@ -154,14 +91,28 @@
     "---\n",
     "* nazwa funkcji musi byc taka sama jak nazwa pliku\n",
     "* zwracane są wartości przypisane do _argumentów wyjściowych_\n",
-    "\n",
+    "* funkcja może mieć wiele argumentów wejsciowych i zwracać wiele wartości wyjściowych\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "Przykład: `pole_kola2.m`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
     "function pole = pole_kola2(r)\n",
@@ -174,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-29T17:58:30.253834Z",
@@ -184,15 +135,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ans =  78.540\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pole_kola2(5)"
    ]
@@ -206,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-10-29T17:41:33.997960Z",
@@ -216,15 +159,7 @@
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pole koła o promieniu 3 wynosi 28.274334\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pole = pole_kola2( 3 );\n",
     "printf('Pole koła o promieniu 3 wynosi %f\\n', pole);"
@@ -237,7 +172,11 @@
     }
    },
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Skrypt lub funkcja mogą byc uruchamiane wewnątrz innych skryptów i funkcji\n",
     "\n",
@@ -250,28 +189,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ans =  3.1416\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "function objetosc = objetosc_stozka(r, h)\n",
+    "% Skrypt wyznacza objętość ztozka.\n",
+    "% ArgumentyL\n",
+    "%   r  - promień podstawy\n",
+    "%   h  - wysokość stożka \n",
+    "\n",
+    "objetosc = pole_kola2(r) * h / 3;\n",
+    "\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "objetosc_stozka(1, 3)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "**Ćwiczenie:**\n",
+    "## Zadanie 2\n",
     "\n",
-    "Napisz funkcję, która wyznacza TODO"
+    "Napisz funkcję o nazwie `rzut_poziomy.m`, która wyznacza zasięg rzutu poziomego zgodnie ze wzorem \n",
+    "$$ Z = v_0 \\sqrt{\\frac{2h}{g}}$$\n",
+    "Argumenty wejściowe funkcji: \n",
+    "* $v_0$ prędkość początkowa\n",
+    "* $h$ wysokość\n",
+    "\n",
+    "Stała przyśpieszenia ziemskiego $g \\approx 9.80665$\n",
+    "\n",
+    "Umieść w pliku komentarz, który spowoduje wypisanie stosonego opisu za pomoca polecenia `help`."
    ]
   },
   {
@@ -286,32 +246,26 @@
     "\n",
     "**if** warunek  \n",
     "&nbsp;&nbsp;&nbsp; instrukcje  \n",
-    "**end**\n",
-    "\n",
-    "* operatory relacji do porównywania wartości\n",
-    "* podobnie jak w C mozna uzywac liczb całkowitych w roli wartości logicznych: fałsz to 0, prawda to 1\n",
-    "\n",
-    "\n"
+    "**end**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x =  2\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x = 2\n",
+    "x = -1\n",
     "if x < 0\n",
-    "    printf('Wartość %f jest mniejsza od zera', x);\n",
+    "    printf('Wartość %f jest mniejsza od zera\\n', x);\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podobnie jak w C liczby całkowite występują w roli wartości logicznych: 0 to fałsz, 1 to prawda\n"
    ]
   },
   {
@@ -324,82 +278,84 @@
    "source": [
     "## Operatory relacji\n",
     "\n",
+    "| Operator   |   Znaczenie |\n",
+    "|:----------:|:-----------:|\n",
+    "| <          |  mniejsze niż | \n",
+    "| <=          |  mniejsze lub równe | \n",
+    "| >          |  większe niż | \n",
+    "| >=          |  większe lub równe | \n",
+    "| ==          |  równe | \n",
+    "| ~=          |  różne | \n",
     "\n",
     "**Uwaga**: `=` to operator przypisania a `==` to operator porównania\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ans = 0\n",
-      "ans = 1\n",
-      "ans = 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "5 < 3       % porównywanie liczb\n",
     "4 == 3 + 1\n",
-    "'z' < 'a'   % porównywanie znaków"
+    "'z' < 'a'   % porównywanie znaków\n",
+    "3 ~= 4\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## Operatory logiczne"
+    "## Operatory logiczne\n",
+    "\n",
+    "| Operator   |   Znaczenie | x=true y=true | x=true y=false  | x=false y=false |\n",
+    "|:----------:|:-----------:|:-------------:|:---------------:|:----------------|\n",
+    "| x \\|\\| y     |  lub (OR) | true  |  true                   | false           |           \n",
+    "| x && y        |  i (AND) | true  |  false                  | false           |\n",
+    "| ~x         |   nie (NOT) | false | false                   | true            |\n",
+    "| xor(x, y)  |exclusive OR | false  | true                   | false\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ans = 0\n",
-      "ans = 1\n",
-      "ans = 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x = 2;\n",
-    "y = 3;\n",
+    "x = 42; y = 3;\n",
     "x < y && y > 5\n",
     "x > y || y - 1 == x \n",
-    "xor(x > y, 'b' < 'a')"
+    "xor(x > y, 'b' < 'a')\n",
+    "~x\n",
+    "xor(1, true)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## Instrukcja if else\n"
+    "## Instrukcja if else\n",
+    "\n",
+    "**if** warunek  \n",
+    "&nbsp;&nbsp;&nbsp; instrukcje wykonane, gry warunek jest prawdziwy  \n",
+    "**else**  \n",
+    "&nbsp;&nbsp;&nbsp; instrukcje wykonane, gdy warunek nie jest prawdziwy  \n",
+    "**end**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x =  42\n",
-      "Liczba  42 jest parzysta"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 42\n",
     "\n",
@@ -414,23 +370,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Instrukcja if elseif else\n"
+    "**Ćwiczenie**: napisz skrypt o nazwie `rzut_moneta.m`, który po uruchomieniu wypisze komunikat \"Orzeł\" lub \"Reszka\". Każdy z wyników może się pojawić z szansą 50%. Do wylosowania wyniku wykorzytsaj funkcję `rand`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Instrukcja if elseif else\n",
+    "\n",
+    "**if** warunek 1  \n",
+    "&nbsp;&nbsp;&nbsp; instrukcje wykonane, gry warunek 1 jest prawdziwy  \n",
+    "**elseif** warunek 2  \n",
+    "&nbsp;&nbsp;&nbsp; instrukcje wykonane, gdy warunek 2 jest prawdziwy  \n",
+    "**else**  \n",
+    "&nbsp;&nbsp;&nbsp; instrukcje wykonane w gdy warunek 1 i warunek 2 nie są prawdziwe  \n",
+    "**end**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x =  42\n",
-      "Liczba 42 jest wieksza lub równa 10"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 42\n",
     "\n",
@@ -445,26 +411,71 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## Pętla for"
+    "## Pętla while\n",
+    "\n",
+    "\n",
+    "**while** warunek  \n",
+    "&nbsp;&nbsp;&nbsp; instrukcje wykonywane dopuki warunek jest prawdziwy  \n",
+    "**end**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pole koła o promieniu 3.000000 wynosi 28.274334\r\n",
-      "Pole koła o promieniu 5.000000 wynosi 78.539816\r\n",
-      "Pole koła o promieniu 7.000000 wynosi 153.938040\r\n"
-     ]
+   "outputs": [],
+   "source": [
+    "x = 1\n",
+    "while x < 10\n",
+    "    printf('%d ', x);\n",
+    "    x = x + 1;\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Zadanie 3\n",
+    "\n",
+    "Napisz funkcję `nwd.m`, która wyznacza największy wspólny dzielnik dwóch liczb naturalnych za pomocą algorytmu Euklidesa. \n",
+    "\n",
+    "Algorytm Euklidesa: dla danych $a$ i $b$\n",
+    "1. jeżeli $a=b$ to $a$ jest nawiększym wspólnym dzielnikiem i zakończ program\n",
+    "2. jeżeli $a<b$ to podstaw do $b$ wartość $b-a$ i wróć do punktu 1\n",
+    "3. jeżeli $a>b$ to podstaw do $a$ wartość $a-b$ i wróć do punktu 1\n",
+    "\n",
+    "Program wypisuje stosowny komunikat pomocy po wywołaniu `help nwd`.   \n",
+    "W przypadku, gdy jeden z argumentów jest mniejszy od 1 to wypisywany jest komunikat `Niepoprawne dane` a funkcja zwraca wartośc 0. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
     }
-   ],
+   },
+   "source": [
+    "## Pętla for\n",
+    "\n",
+    "\n",
+    "**for** zmienna **=** [ lista wlementów ]  \n",
+    "&nbsp;&nbsp;&nbsp; instrukcje  \n",
+    "**end**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "for i=[3 5 7]\n",
     "    printf('Pole koła o promieniu %f wynosi %f\\n', i, pole_kola2(i));\n",
@@ -472,31 +483,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  1   2   3   4   5   6   7   8   9  10 \r\n",
-      "  2   4   6   8  10  12  14  16  18  20 \r\n",
-      "  3   6   9  12  15  18  21  24  27  30 \r\n",
-      "  4   8  12  16  20  24  28  32  36  40 \r\n",
-      "  5  10  15  20  25  30  35  40  45  50 \r\n",
-      "  6  12  18  24  30  36  42  48  54  60 \r\n",
-      "  7  14  21  28  35  42  49  56  63  70 \r\n",
-      "  8  16  24  32  40  48  56  64  72  80 \r\n",
-      "  9  18  27  36  45  54  63  72  81  90 \r\n",
-      " 10  20  30  40  50  60  70  80  90 100 \r\n"
-     ]
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
     }
-   ],
+   },
+   "source": [
+    "## Instrukcje zagnieżdzone\n",
+    "\n",
+    "Przykład: tabliczka mnozenia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "% tabliczka mnożenia\n",
-    "for i=1:10\n",
-    "    for j=1:10\n",
+    "n = 10\n",
+    "for i=1:n\n",
+    "    for j=1:n\n",
     "        printf('%3d ', i*j);\n",
     "    end\n",
     "    printf('\\n');\n",
