Zajecia 3: instrukcje sterujace

--- a/02_funkcje_instr.ipynb
+++ b/02_funkcje_instr.ipynb
@@ -32,7 +32,7 @@
     "* nazwa skryptu staje się poleceniem\n",
     "* znak `%` rozpoczyna komentarz. Komentarz umieszczony na poczatku skryptu wyświtlaby jest przez polecenie `help`\n",
     "\n",
-    "Przykład: skrypt `pole_kola.m`\n"
+    "Przykład: skrypt [pole_kola.m](https://raw.githubusercontent.com/IS-UMK/pp2_matlab/master/pole_kola.m)\n"
    ]
   },
   {
@@ -102,7 +102,7 @@
     }
    },
    "source": [
-    "Przykład: `pole_kola2.m`"
+    "Przykład: [pole_kola2.m](https://raw.githubusercontent.com/IS-UMK/pp2_matlab/master/pole_kola2.m)"
    ]
   },
   {
@@ -180,7 +180,7 @@
    "source": [
     "Skrypt lub funkcja mogą byc uruchamiane wewnątrz innych skryptów i funkcji\n",
     "\n",
-    "Przykład: funkcja `objetosc_stozka.m` wyznacza wartość: \n",
+    "Przykład: funkcja [objetosc_stozka.m](https://raw.githubusercontent.com/IS-UMK/pp2_matlab/master/objetosc_stozka.m) wyznacza wartość: \n",
     "$$ V = \\frac{1}{3} \\pi r^2 h $$\n",
     "gdzie argumentami skryptu są wartości: $r$ promień podstawy, $h$ wysokość stożka.\n",
     "\n",
@@ -221,7 +221,7 @@
     }
    },
    "source": [
-    "## Zadanie 2\n",
+    "**Zadanie 2**\n",
     "\n",
     "Napisz funkcję o nazwie `rzut_poziomy.m`, która wyznacza zasięg rzutu poziomego zgodnie ze wzorem \n",
     "$$ Z = v_0 \\sqrt{\\frac{2h}{g}}$$\n",
@@ -256,6 +256,7 @@
    "outputs": [],
    "source": [
     "x = -1\n",
+    "\n",
     "if x < 0\n",
     "    printf('Wartość %f jest mniejsza od zera\\n', x);\n",
     "end"
@@ -265,7 +266,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podobnie jak w C liczby całkowite występują w roli wartości logicznych: 0 to fałsz, 1 to prawda\n"
+    "Podobnie jak w języku C liczby całkowite występują w roli wartości logicznych: 0 to fałsz, 1 to prawda\n"
    ]
   },
   {
@@ -292,14 +293,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ans = 0\n",
+      "ans = 1\n",
+      "ans = 0\n",
+      "ans = 1\n",
+      "x = 0\n"
+     ]
+    }
+   ],
    "source": [
     "5 < 3       % porównywanie liczb\n",
     "4 == 3 + 1\n",
     "'z' < 'a'   % porównywanie znaków\n",
-    "3 ~= 4\n"
+    "3 ~= 4\n",
+    "x = 1 == 2"
    ]
   },
   {
@@ -345,7 +359,7 @@
     "## Instrukcja if else\n",
     "\n",
     "**if** warunek  \n",
-    "&nbsp;&nbsp;&nbsp; instrukcje wykonane, gry warunek jest prawdziwy  \n",
+    "&nbsp;&nbsp;&nbsp; instrukcje wykonane, gdy warunek jest prawdziwy  \n",
     "**else**  \n",
     "&nbsp;&nbsp;&nbsp; instrukcje wykonane, gdy warunek nie jest prawdziwy  \n",
     "**end**\n"
@@ -353,13 +367,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x =  42\n",
+      "Liczba  42 jest parzysta"
+     ]
+    }
+   ],
    "source": [
     "x = 42\n",
     "\n",
-    "if x % 2 == 0\n",
+    "if mod(x, 2) == 0\n",
     "    printf('Liczba  %d jest parzysta', x);\n",
     "else\n",
     "    printf('Liczba %d jest nieparzysta', x);\n",
@@ -368,9 +391,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "**Ćwiczenie**: napisz skrypt o nazwie `rzut_moneta.m`, który po uruchomieniu wypisze komunikat \"Orzeł\" lub \"Reszka\". Każdy z wyników może się pojawić z szansą 50%. Do wylosowania wyniku wykorzytsaj funkcję `rand`."
+    "**Ćwiczenie**:   \n",
+    "Napisz skrypt o nazwie `rzut_moneta.m`, który po uruchomieniu wypisze komunikat \"Orzeł\" lub \"Reszka\". Każdy z wyników może się pojawić z szansą 50%. Do wylosowania wyniku wykorzytsaj funkcję `rand`."
    ]
   },
   {
@@ -386,7 +414,8 @@
     "**if** warunek 1  \n",
     "&nbsp;&nbsp;&nbsp; instrukcje wykonane, gry warunek 1 jest prawdziwy  \n",
     "**elseif** warunek 2  \n",
-    "&nbsp;&nbsp;&nbsp; instrukcje wykonane, gdy warunek 2 jest prawdziwy  \n",
+    "&nbsp;&nbsp;&nbsp; instrukcje wykonane, gdy warunek 2 jest prawdziwy a warunek 1 jest nieprawdziwy  \n",
+    "&nbsp;&nbsp;&nbsp; ...  \n",
     "**else**  \n",
     "&nbsp;&nbsp;&nbsp; instrukcje wykonane w gdy warunek 1 i warunek 2 nie są prawdziwe  \n",
     "**end**\n"
@@ -421,7 +450,7 @@
     "\n",
     "\n",
     "**while** warunek  \n",
-    "&nbsp;&nbsp;&nbsp; instrukcje wykonywane dopuki warunek jest prawdziwy  \n",
+    "&nbsp;&nbsp;&nbsp; instrukcje wykonywane dopóki warunek jest prawdziwy  \n",
     "**end**\n"
    ]
   },
@@ -440,19 +469,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Zadanie 3\n",
     "\n",
     "Napisz funkcję `nwd.m`, która wyznacza największy wspólny dzielnik dwóch liczb naturalnych za pomocą algorytmu Euklidesa. \n",
     "\n",
     "Algorytm Euklidesa: dla danych $a$ i $b$\n",
-    "1. jeżeli $a=b$ to $a$ jest nawiększym wspólnym dzielnikiem i zakończ program\n",
+    "1. jeżeli $a=b$ to $a$ jest największym wspólnym dzielnikiem. Zakończ program\n",
     "2. jeżeli $a<b$ to podstaw do $b$ wartość $b-a$ i wróć do punktu 1\n",
     "3. jeżeli $a>b$ to podstaw do $a$ wartość $a-b$ i wróć do punktu 1\n",
     "\n",
     "Program wypisuje stosowny komunikat pomocy po wywołaniu `help nwd`.   \n",
-    "W przypadku, gdy jeden z argumentów jest mniejszy od 1 to wypisywany jest komunikat `Niepoprawne dane` a funkcja zwraca wartośc 0. \n"
+    "W przypadku, gdy jeden z argumentów jest mniejszy od 1 to wypisywany jest komunikat `Niepoprawne dane` a funkcja `nwd` zwraca wartość 0. \n"
    ]
   },
   {
@@ -466,7 +499,7 @@
     "## Pętla for\n",
     "\n",
     "\n",
-    "**for** zmienna **=** [ lista wlementów ]  \n",
+    "**for** zmienna **=** [ lista elementów ]  \n",
     "&nbsp;&nbsp;&nbsp; instrukcje  \n",
     "**end**"
    ]
@@ -492,13 +525,17 @@
    "source": [
     "## Instrukcje zagnieżdzone\n",
     "\n",
-    "Przykład: tabliczka mnozenia"
+    "Przykład: tabliczka mnożenia"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
    "outputs": [],
    "source": [
     "% tabliczka mnożenia\n",
@@ -509,6 +546,167 @@
     "    end\n",
     "    printf('\\n');\n",
     "end\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## break, continue\n",
+    "\n",
+    "Wewnątrz pętli `while` i `for` mozna użyc instrukcji `break` oraz `continue`\n",
+    "* instrukcja `break` przerywa działanie pętli\n",
+    "* instrukcja `continue` przechodzi do następnej iteracji\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Liczba 11 jest liczbą pierwszą\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 11;\n",
+    "czy_pierwsza = true;\n",
+    "\n",
+    "for i = 2:n-1\n",
+    "    if mod(n, i) == 0\n",
+    "        czy_pierwsza = false;\n",
+    "        break\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "if czy_pierwsza\n",
+    "    printf('Liczba %d jest liczbą pierwszą\\n', n)\n",
+    "else\n",
+    "    printf('Liczba %d nie jest liczbą pierwszą\\n', n)\n",
+    "    printf('Znalazłem dzielnik %d\\n', i)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for n=1:20\n",
+    "    if n == 13\n",
+    "        continue\n",
+    "    end\n",
+    "    printf('%d ', n)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## switch case\n",
+    "\n",
+    "\n",
+    "**switch** wyrażenie  \n",
+    "&nbsp;&nbsp;&nbsp;**case** wartość1  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; instrukcje wykonane, gry wyrażenie == wartość1    \n",
+    "&nbsp;&nbsp;&nbsp;**case** wartość2  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; instrukcje wykonane, gry wyrażenie == wartość2  \n",
+    "&nbsp;&nbsp;&nbsp; ...`  \n",
+    "&nbsp;&nbsp;&nbsp;**otherwise**  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; instrukcje wykonane, gry nie zaszedł żaden z powyższych przeypadków  \n",
+    "**end**  \n",
+    "\n",
+    "***\n",
+    "\n",
+    "Uwaga: w przeciwieństwie do języka C wykonywany jest zawsze tylko pasujący przypadek (brak instrukcji `break`) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "Zmienna `nargin` zawiera liczbę argumentów podaną przy uruchomieniu funkcji. \n",
+    "Można to wykorzytsać do wstawienia domyślnych wartości argumentów. \n",
+    "\n",
+    "Przykład: skrypt [argumenty.m](https://raw.githubusercontent.com/IS-UMK/pp2_matlab/master/argumnety.m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function argumenty(x)\n",
+    "   switch nargin\n",
+    "      case 0\n",
+    "         x = 42;    % wartosc domyslna\n",
+    "      case 1 \n",
+    "         printf('Jeden argument\\n')\n",
+    "      otherwise\n",
+    "         printf('Podałeś więcej niż 1 argument\\n')\n",
+    "   end\n",
+    "   disp(x)\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "argumenty\n",
+    "argumenty()\n",
+    "argumenty(13)\n",
+    "argumenty(13, 44)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "**Ćwiczenie**  \n",
+    "Skrypt `rzut_moneta` przepisz do postaci funkcji, która może przyjąć 2 argumenty.  \n",
+    "Argumenty:  \n",
+    "* $p$ prawdopodobieństwo wylosowania orła. Domyślna wartość $p=0.5$\n",
+    "* $n$ ilość powtórzeń rzutu. Dmyślna wartość $n=1$\n",
+    "\n",
+    "W przypadku braku podania argumentów funkcja zachowuje się identyczne jak pierwotny skrypt, tj. z prawdopodobieństwem $p=0.5$ wylosuje orła lub reszkę. Podanie pierwszego argumentu definiuje prawdopodobieństwo wypadnięcia orła, zaź podanie drugiego argumentu pozwala ustwaić liczbę rzutów monetą (wynik wypisywany jest $n$ razy)."
    ]
   }
  ],
