--- a/02_funkcje_instr.ipynb
+++ b/02_funkcje_instr.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "\n",
     "* **skrypt** jest programem, który możemy uruchomić w linii komend Matlaba, operuje na danych zdefiniowanych w przestrzeni roboczej (*workspace*)\n",
-    "* skrypt może realizoać **funkcję**, czyli dla danych argumentów wzraca wartość wyjściową. Zmienne wewnętrzne funkcji są zmiennymi lokalnymi\n",
+    "* skrypt może realizować **funkcję**, czyli dla danych argumentów wzraca wartość wyjściową. Zmienne wewnętrzne funkcji są zmiennymi lokalnymi\n",
     "* podstawowe instrukcje sterujące\n",
     "  * instrukcja warunkowa `if`\n",
     "  * pętla `while` i `for`\n",
@@ -30,7 +30,7 @@
     "## Skrypt \n",
     "\n",
     "* nazwa skryptu staje się poleceniem\n",
-    "* znak `%` rozpoczyna komentarz. Komentarz umieszczony na poczatku skryptu wyświtlaby jest przez polecenie `help`\n",
+    "* znak `%` rozpoczyna komentarz. Komentarz umieszczony na początku skryptu wyświtlany jest przez polecenie `help`\n",
     "\n",
     "Przykład: skrypt [pole_kola.m](https://raw.githubusercontent.com/IS-UMK/pp2_matlab/master/pole_kola.m)\n"
    ]
@@ -231,7 +231,7 @@
     "\n",
     "Stała przyśpieszenia ziemskiego $g \\approx 9.80665$\n",
     "\n",
-    "Umieść w pliku komentarz, który spowoduje wypisanie stosonego opisu za pomoca polecenia `help`."
+    "Umieść w pliku komentarz, który spowoduje wypisanie stosownego opisu za pomocą polecenia `help`."
    ]
   },
   {
@@ -293,21 +293,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ans = 0\n",
-      "ans = 1\n",
-      "ans = 0\n",
-      "ans = 1\n",
-      "x = 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "5 < 3       % porównywanie liczb\n",
     "4 == 3 + 1\n",
@@ -367,18 +355,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x =  42\n",
-      "Liczba  42 jest parzysta"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 42\n",
     "\n",
@@ -398,7 +377,7 @@
    },
    "source": [
     "**Ćwiczenie**:   \n",
-    "Napisz skrypt o nazwie `rzut_moneta.m`, który po uruchomieniu wypisze komunikat \"Orzeł\" lub \"Reszka\". Każdy z wyników może się pojawić z szansą 50%. Do wylosowania wyniku wykorzytsaj funkcję `rand`."
+    "Napisz skrypt o nazwie `rzut_moneta.m`, który po uruchomieniu wypisze komunikat \"Orzeł\" lub \"Reszka\". Każdy z wyników może się pojawić z szansą 50%. Do wylosowania wyniku wykorzystaj funkcję `rand`."
    ]
   },
   {
@@ -434,7 +413,7 @@
     "elseif x < 10\n",
     "    printf('Liczba %d jest dodatnia i mniejsza od 10', x);\n",
     "else\n",
-    "    printf('Liczba %d jest wieksza lub równa 10', x);\n",
+    "    printf('Liczba %d jest większa lub równa 10', x);\n",
     "end"
    ]
   },
@@ -558,7 +537,7 @@
    "source": [
     "## break, continue\n",
     "\n",
-    "Wewnątrz pętli `while` i `for` mozna użyc instrukcji `break` oraz `continue`\n",
+    "Wewnątrz pętli `while` i `for` można użyć instrukcji `break` oraz `continue`\n",
     "* instrukcja `break` przerywa działanie pętli\n",
     "* instrukcja `continue` przechodzi do następnej iteracji\n",
     "\n",
@@ -567,21 +546,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Liczba 11 jest liczbą pierwszą\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = 11;\n",
     "czy_pierwsza = true;\n",
@@ -635,9 +606,9 @@
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; instrukcje wykonane, gry wyrażenie == wartość1    \n",
     "&nbsp;&nbsp;&nbsp;**case** wartość2  \n",
     "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; instrukcje wykonane, gry wyrażenie == wartość2  \n",
-    "&nbsp;&nbsp;&nbsp; ...`  \n",
+    "&nbsp;&nbsp;&nbsp; ...  \n",
     "&nbsp;&nbsp;&nbsp;**otherwise**  \n",
-    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; instrukcje wykonane, gry nie zaszedł żaden z powyższych przeypadków  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; instrukcje wykonane, gry nie zaszedł żaden z powyższych przypadków  \n",
     "**end**  \n",
     "\n",
     "***\n",
@@ -654,7 +625,7 @@
    },
    "source": [
     "Zmienna `nargin` zawiera liczbę argumentów podaną przy uruchomieniu funkcji. \n",
-    "Można to wykorzytsać do wstawienia domyślnych wartości argumentów. \n",
+    "Można to wykorzystać do wstawienia domyślnych wartości argumentów. \n",
     "\n",
     "Przykład: skrypt [argumenty.m](https://raw.githubusercontent.com/IS-UMK/pp2_matlab/master/argumnety.m)"
    ]
